syntax = "proto3";

package backend;

import "common.proto";
import "convex_identity.proto";
import "convex_token.proto";
import "searchlight.proto";
import "storage.proto";
import "usage.proto";

service Backend {
    // Query/mutation RPCs. Performed at a snapshot.
    rpc TextSearchAtTs(TextSearchAtTsRequest) returns (TextSearchAtTsResponse);
    rpc TableCountAtTs(TableCountAtTsRequest) returns (TableCountAtTsResponse);

    // Action RPCs. Performed as a separate transaction at latest timestamp.
    rpc ExecuteQuery(ExecuteQueryRequest) returns (ExecuteQueryResponse);
    rpc ExecuteMutation(ExecuteMutationRequest) returns (ExecuteMutationResponse);
    rpc ExecuteAction(ExecuteActionRequest) returns (ExecuteActionResponse);

    rpc StorageGetUrl(StorageGetUrlRequest) returns (StorageGetUrlResponse);
    rpc StorageGetFileEntry(StorageGetFileEntryRequest) returns (StorageGetFileEntryResponse);
    rpc StorageStoreFileEntry(StorageStoreFileEntryRequest) returns (StorageStoreFileEntryResponse);
    rpc StorageDelete(StorageDeleteRequest) returns (StorageDeleteResponse);

    rpc ScheduleJob(ScheduleJobRequest) returns (ScheduleJobResponse);
    rpc CancelJob(CancelJobRequest) returns (CancelJobResponse);

    rpc VectorSearch(VectorSearchRequest) returns (VectorSearchResponse);
}

// The request header is used by all requests to validate we are talking to the
// correct backend.
message RequestHeader {
    optional string instance_name = 1;
    optional string request_id = 2;
    optional string encoded_parent_trace = 3;
}

message TextSearchAtTsRequest {
    RequestHeader header = 6;

    optional uint64 ts = 1;
    optional bytes index_id = 2;
    optional searchlight.TextQuery query = 3;
    optional string printable_index_name = 4;
    repeated common.DocumentUpdate pending_updates = 5;
}

message TextSearchAtTsResponse {
    repeated RevisionWithKey revisions_with_keys = 1;
}

message RevisionWithKey {
    optional searchlight.CandidateRevision revision = 1;
    optional bytes key = 2;
}

message TableCountAtTsRequest {
    RequestHeader header = 3;

    optional uint64 ts = 1;
    optional bytes table_id = 2;
}

message TableCountAtTsResponse {
    optional uint64 count = 1;
}

message ExecuteQueryRequest {
    reserved 7;
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    common.PathAndArgs path_and_args = 3;
    optional common.ExecutionContext execution_context = 6;
}

message ExecuteQueryResponse {
    common.FunctionResult result = 1;
}

message ExecuteMutationRequest {
    reserved 4, 7;

    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    common.PathAndArgs path_and_args = 3;
    optional common.ExecutionContext execution_context = 6;
}

message ExecuteMutationResponse {
    common.FunctionResult result = 1;
}

message ExecuteActionRequest {
    reserved 4, 7;

    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    common.PathAndArgs path_and_args = 3;
    optional common.ExecutionContext execution_context = 6;
}

message ExecuteActionResponse {
    common.FunctionResult result = 1;
}

message StorageGetUrlRequest {
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    storage.FileStorageId storage_id = 3;
}

message StorageGetUrlResponse {
    optional string url = 1;
}

message StorageGetFileEntryRequest {
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    storage.FileStorageId storage_id = 3;
}

message StorageGetFileEntryResponse {
    storage.FileStorageEntry entry = 1;
}

message StorageStoreFileEntryRequest {
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    storage.FileStorageEntry entry = 3;
}

message StorageStoreFileEntryResponse {
    optional string document_id = 1;
}

message StorageDeleteRequest {
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    storage.FileStorageId storage_id = 3;
}

message StorageDeleteResponse {
}

message ScheduleJobRequest {
    reserved 5;
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    common.PathAndArgs path_and_args = 3;
    optional double scheduled_ts = 4;
    optional common.ExecutionContext execution_context = 6;
}

message ScheduleJobResponse {
    optional string id = 1;
}

message CancelJobRequest {
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    optional string id = 3;
}

message CancelJobResponse {
}

message VectorSearchRequest {
    RequestHeader header = 1;

    convex_identity.UncheckedIdentity identity = 2;
    optional bytes query_json = 3;
}

message VectorSearchResponse {
    repeated PublicVectorQueryResult results = 1;
    usage.FunctionUsageStats usage_stats = 2;
}

message PublicVectorQueryResult {
  optional float score = 1;
  optional string document_id = 2;
}
